change home content

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,7 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron">
+  <h1 class="display-4">Save the Pony!</h1>
+  <p class="lead">Help us by trying to save the pony and escape from the Maze.</p>
+  <hr class="my-4">
+  <p>There is no time get started now.</p>
+  <button class="btn btn-primary btn-lg" [routerLink]="['/get-started']">Start Now!</button>
+</div>
