make send button bigger

--- a/src/app/start-playing/start-playing.component.html
+++ b/src/app/start-playing/start-playing.component.html
@@ -29,7 +29,7 @@
           <small class="form-text text-muted">Maze Height Should be between 15-25</small>
         </div>
 
-        <button type="submit" class="btn btn-primary" [disabled]="!ponyUserForm.valid">Submit</button>
+        <button type="submit" class="btn btn-primary btn-lg mx-auto" [disabled]="!ponyUserForm.valid">Submit</button>
 
       </div>
     </form>
