more control to user interface

--- a/src/app/game-playground/game-playground.component.html
+++ b/src/app/game-playground/game-playground.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf="!isStart">
   <div class="btn-toolbar mx-auto">
     <div class="btn-group">
       <button class="btn btn-primary btn-sm" (click)="handleMovements('north')">Up</button>
